Fix weird align in issue comment

--- a/content/vue/src/styles/components/pages/issue/timeline/_issue-comment.scss
+++ b/content/vue/src/styles/components/pages/issue/timeline/_issue-comment.scss
@@ -28,7 +28,7 @@
 
   &-info {
     display: flex;
-    align-items: center;
+    align-items: baseline;
 
     margin-bottom: 0.5rem;
 
